tests/errors/continue_outside_loop.milo
// @error: 'continue' outside of loop
fn main(): i32 {
    continue
    return 0
}
